PROJECT(RUST_TEST)

FIND_PACKAGE(Ruby REQUIRED)

if ( NOT MSVC )
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
   ADD_DEFINITIONS(-DHAVE_VISIBILITY)
endif ( NOT MSVC )

ENABLE_TESTING()

SET(RUNTEST_COMMAND ${RUBY_EXECUTABLE} "-I${CMAKE_SOURCE_DIR}/.." "-I${CMAKE_SOURCE_DIR}/../rust")

ADD_TEST(cppclass_base_generation ${RUNTEST_COMMAND} -C cppclass_base "${CMAKE_CURRENT_SOURCE_DIR}/cppclass_base/cppclass.rb")
